--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,8 @@ Authors@R:
 Description: R package containing preferred methods for creating official DfE R-Shiny dashboards.
 License: `use_gpl3_license()`
 Encoding: UTF-8
+Imports: 
+    shinyGovstyle,
+    shiny
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
