Revert "Switched support and feedback page to bslib card"
This reverts commit e3be094e6743ad9f818e83fd591504108daf4c53.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,6 @@ Encoding: UTF-8
 Imports: 
     shinyGovstyle,
     shiny,
-    styler,
-    bslib
+    styler
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
