--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,6 @@ Imports:
     styler
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
