--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Encoding: UTF-8
 Imports: 
     shinyGovstyle,
     shiny,
-    styler
+    styler,
+    stringr,
+    dplyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
