--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: dfeshiny
 Title: DfE R-Shiny Standards
 Version: 0.1.1
-Authors@R: 
+Authors@R: c(
     person("Rich", "Bielby", , "richard.bielby@education.gov.uk", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-9070-9969"))
+           comment = c(ORCID = "0000-0001-9070-9969")),
+    person("Charlotte", "Foster", , "charlotte.foster@education.gov.uk", role = c("aut"))
+)
 Description: R package containing preferred methods for creating official DfE R-Shiny dashboards.
 License: `use_gpl3_license()`
 Encoding: UTF-8
