--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,6 @@
 
 export(cookieBannerServer)
 export(cookieBannerUI)
-export(cookieHeaderUI)
+export(cookie_script)
 export(support_panel)
 export(tidy_code)
