--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
     testthat (>= 3.0.0)
+    shinytest2
+    diffviewer
 Config/testthat/edition: 3
