--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Imports:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
-    testthat (>= 3.0.0)
-    shinytest2
+    testthat (>= 3.0.0),
+    shinytest2,
     diffviewer
 Config/testthat/edition: 3
