--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,14 @@ Version: 0.1.1
 Authors@R: c(
     person("Rich", "Bielby", , "richard.bielby@education.gov.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9070-9969")),
-    person("Charlotte", "Foster", , "charlotte.foster@education.gov.uk", role = c("aut"))
-)
+    person("Charlotte", "Foster", , "charlotte.foster@education.gov.uk", role = c("aut")))
 Description: R package containing preferred methods for creating official DfE R-Shiny dashboards.
 License: `use_gpl3_license()`
 Encoding: UTF-8
 Imports: 
     shinyGovstyle,
     shiny,
-    styler
+    styler, 
+    RCurl
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
