--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ Imports:
     shinyGovstyle,
     shiny,
     styler, 
-    RCurl
+    RCurl, 
+    stringr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
