--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Rich", "Bielby", , "richard.bielby@education.gov.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9070-9969"))
 Description: R package containing preferred methods for creating official DfE R-Shiny dashboards.
-License: `use_gpl3_license()`
+License: GPL (>= 3)
 Encoding: UTF-8
 Imports: 
     shinyGovstyle,
