--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,11 @@ Encoding: UTF-8
 Imports: 
     shinyGovstyle,
     shiny,
-    styler, 
-    RCurl, 
-    stringr
+    styler,
+    RCurl,
+    stringr,
+    htmltools,
+    Rcurl
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
