improve documentation and add tests for custom disconnect message

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,5 @@ export(custom_disconnect_message)
 export(dfe_cookie_script)
 export(support_panel)
 export(tidy_code)
+importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
-importFrom(htmltools,tagslist)
