--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,3 +22,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+URL: https://dfe-analytical-services.github.io/dfeshiny/
