Added styling to pkgdown

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,19 @@
 url: https://dfe-analytical-services.github.io/dfeshiny/
 template:
   bootstrap: 5
+  bootswatch: yeti
+  bslib:
+    pkgdown-nav-height: 81.4468px
+
+reference:
+- title: Maintenance
+  contents:
+  - tidy_code
+- title: Cookies
+  contents:
+  - starts_with("cookie")
+  - dfe_cookie_script
+- title: Standard panels
+  contents:
+  - support_panel
 
