Fixing heading hierarchy in readme and switching theme to match analysts guide

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,7 @@
 url: https://dfe-analytical-services.github.io/dfeshiny/
 template:
   bootstrap: 5
-  bootswatch: yeti
+  bootswatch: cyborg
   bslib:
     pkgdown-nav-height: 81.4468px
 
