--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(cookie_banner_server)
 export(cookie_banner_ui)
+export(cookies_panel)
 export(custom_disconnect_message)
 export(dfe_cookie_script)
 export(support_panel)
