--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,8 @@ Imports:
     styler
 Suggests: 
     diffviewer,
+    knitr,
+    rmarkdown,
     shinytest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -30,3 +32,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://dfe-analytical-services.github.io/dfeshiny/
      https://www.github.com/dfe-analytical-services/dfeshiny/
+VignetteBuilder: knitr
