addressing review comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cookie_banner_server)
 export(cookie_banner_ui)
 export(custom_disconnect_message)
 export(dfe_cookie_script)
+export(init_cookies)
 export(support_panel)
 export(tidy_code)
 importFrom(htmltools,tagList)
