--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Suggests:
     knitr,
     rmarkdown,
     shinytest2,
+    devtools,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
