--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .Rhistory
 .RData
 .Ruserdata
-./google-analytics.html
+google-analytics.html
+tests/testthat/google-analytics.html
 docs
 inst/doc
 www/
