--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: dfeshiny
 Title: DfE R-Shiny Standards
-Version: 0.2.0
+Version: 0.3.0
 Authors@R: c(
     person("Rich", "Bielby", , "richard.bielby@education.gov.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9070-9969")),
@@ -26,6 +26,7 @@ Suggests:
     knitr,
     rmarkdown,
     shinytest2,
+    devtools,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
