--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cookies_panel_server)
 export(cookies_panel_ui)
 export(custom_disconnect_message)
 export(dfe_cookies_script)
+export(external_link)
 export(init_analytics)
 export(init_cookies)
 export(support_panel)
