add zzz.R file for attaching www resources on package load

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,4 @@ export(tidy_code)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
 importFrom(magrittr,"%>%")
+importFrom(shiny,addResourcePath)
