--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cookies_panel_ui)
 export(custom_disconnect_message)
 export(dfe_cookies_script)
 export(external_link)
+export(html_paragraph_tags)
 export(init_analytics)
 export(init_cookies)
 export(support_panel)
