changed html_paragraph_tags to section_tags removed other custom text args except for the feedback section one
moved section tags to be under support panel in  the pkgdown file

updated documentation and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,9 @@ export(cookies_panel_ui)
 export(custom_disconnect_message)
 export(dfe_cookies_script)
 export(external_link)
-export(html_paragraph_tags)
 export(init_analytics)
 export(init_cookies)
+export(section_tags)
 export(support_panel)
 export(tidy_code)
 importFrom(htmltools,tagList)
