--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -26,7 +26,4 @@ reference:
 - title: Standard panels
   contents:
   - support_panel
-- title: HTML paragraph
-  desc: A function to create a shiny::tagList() for a paragraph.
-  contents:
-  - html_paragraph_tags
+  - section_tags
