--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,15 @@ Authors@R: c(
 Description: R package containing preferred methods for creating official
     DfE R-Shiny dashboards.
 License: GPL (>= 3)
+URL: https://dfe-analytical-services.github.io/dfeshiny/
+    https://www.github.com/dfe-analytical-services/dfeshiny/
+Depends: 
+    R (>= 2.10)
 Imports: 
-    magrittr,
     checkmate,
     glue,
     htmltools,
+    magrittr,
     RCurl,
     shiny,
     shinyGovstyle,
@@ -22,21 +26,18 @@ Imports:
     stringr,
     styler
 Suggests: 
+    devtools,
     diffviewer,
     knitr,
     rmarkdown,
     shinytest2,
-    devtools,
-    testthat (>= 3.0.0),
-    spelling
+    spelling,
+    testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://dfe-analytical-services.github.io/dfeshiny/
-     https://www.github.com/dfe-analytical-services/dfeshiny/
-VignetteBuilder: knitr
-Depends: 
-    R (>= 2.10)
-LazyData: true
-Language: en-US
