created a wrapper function for header in shinygovstyle added and updated documentation (needed to update for support_panel) added tests need to update example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cookies_panel_ui)
 export(custom_disconnect_message)
 export(dfe_cookies_script)
 export(external_link)
+export(header)
 export(init_analytics)
 export(init_cookies)
 export(section_tags)
