amended pkgdown.yml to add header function

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,3 +27,7 @@ reference:
   contents:
   - support_panel
   - section_tags
+- title: Header
+  desc: A wrapper for shinyGovstyle::header() that automatically uses the DfE logo.
+  contents:
+  - header
