take 2 with footer stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cookies_panel_ui)
 export(custom_disconnect_message)
 export(dfe_cookies_script)
 export(external_link)
+export(footer_dfe)
 export(header)
 export(init_analytics)
 export(init_cookies)
