--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -23,32 +23,36 @@ jobs:
         run: |
           DASHBOARD_NAME=$(yq '.DASHBOARD_NAME' ${{ inputs.parameter_file }})
           DEPLOY_TARGET=$(yq '.deploy_target' ${{ inputs.parameter_file }})
-          INSTALL_GDAL=$(yq '.install_gdal' ${{ inputs.parameter_file }})
+          INSTALL_TERRA_DEPENDENCIES=$(yq '.install_terra_dependencies' ${{ inputs.parameter_file }})
+          INSTALL_UNITS_DEPENDENCIES=$(yq '.install_unit_dependencies' ${{ inputs.parameter_file }})
           EXTRA_PACKAGES=$(yq '.extra_packages | join(" ")' ${{ inputs.parameter_file }})
 
           echo "DASHBOARD_NAME=$DASHBOARD_NAME" >> $GITHUB_ENV
           echo "DEPLOY_TARGET=$DEPLOY_TARGET" >> $GITHUB_ENV
-          echo "INSTALL_GDAL=$INSTALL_GDAL" >> $GITHUB_ENV
+          echo "INSTALL_TERRA_DEPENDENCIES=INSTALL_TERRA_DEPENDENCIES" >> $GITHUB_ENV
+          echo "INSTALL_UNITS_DEPENDENCIES=INSTALL_UNITS_DEPENDENCIES" >> $GITHUB_ENV
           echo "EXTRA_PACKAGES=$EXTRA_PACKAGES" >> $GITHUB_ENV
 
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
 
-      - name: Install GDAL
-        if: env.INSTALL_GDAL == 'true'
+      - name: Install terra dependencies
+        if: env.INSTALL_TERRA_DEPENDENCIES == 'true'
         run: |
           sudo apt-get update -y
           sudo apt-get install -y gdal-bin libgdal-dev proj-bin libproj-dev
+
+      - name: Install units dependencies
+        if: env.INSTALL_UNITS_DEPENDENCIES == 'true'
+        run: sudo apt-get install libudunits2-dev
 
       - name: Set environment variables based on branch
         run: |
           if [[ "${{ github.ref_name }}" == "main" ]]; then
             echo "SHINYAPP_NAME='${{ env.DASHBOARD_NAME }}'" >> $GITHUB_ENV
-            echo "SHINYAPP_OVERFLOW_NAME='${{ env.DASHBOARD_NAME }}-overflow'" >> $GITHUB_ENV
           else
             echo "SHINYAPP_NAME='dev-${{ env.DASHBOARD_NAME }}'" >> $GITHUB_ENV
-            echo "SHINYAPP_OVERFLOW_NAME='dev-${{ env.DASHBOARD_NAME }}-overflow'" >> $GITHUB_ENV
           fi
 
       - name: Restore renv snapshot
@@ -77,4 +81,3 @@ jobs:
         run: |
           Rscript -e "rsconnect::setAccountInfo(name = 'department-for-education', token = '${{ secrets.SHINYAPPS_TOKEN }}', secret = '${{ secrets.SHINYAPPS_SECRET }}')"
           Rscript -e "rsconnect::deployApp(appName='${{ env.SHINYAPP_NAME }}', forceUpdate = TRUE)"
-          Rscript -e "rsconnect::deployApp(appName='${{ env.SHINYAPP_OVERFLOW_NAME }}', forceUpdate = TRUE)"
