--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -10,14 +10,12 @@ on:
 
 jobs:
   deployShiny:
-    runs-on: ubuntu-latest
+
+    container:
+      image: ghcr.io/dfe-analytical-services/dfe-r-base:latest
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install yq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y yq
 
       - name: Read parameters
         run: |
