--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -10,9 +10,8 @@ on:
 
 jobs:
   deployShiny:
-
-    container:
-      image: ghcr.io/dfe-analytical-services/dfe-r-base:latest
+    runs-on: ubuntu-latest
+    container: ghcr.io/dfe-analytical-services/dfe-r-base:latest
 
     steps:
       - uses: actions/checkout@v4
@@ -34,16 +33,6 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
-      - name: Install terra dependencies
-        if: env.INSTALL_TERRA_DEPENDENCIES == 'true'
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y gdal-bin libgdal-dev proj-bin libproj-dev
-
-      - name: Install units dependencies
-        if: env.INSTALL_UNITS_DEPENDENCIES == 'true'
-        run: sudo apt-get install libudunits2-dev
 
       - name: Set environment variables based on branch
         run: |
