--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -12,6 +12,9 @@ jobs:
   deployShiny:
     runs-on: ubuntu-latest
     container: ghcr.io/dfe-analytical-services/dfe-r-base:latest
+    credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
