--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -28,10 +28,6 @@ jobs:
           echo "DASHBOARD_NAME=$DASHBOARD_NAME" >> $GITHUB_ENV
           echo "DEPLOY_TARGET=$DEPLOY_TARGET" >> $GITHUB_ENV
 
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
-
       - name: Set environment variables based on branch
         run: |
           if [[ "${{ github.ref_name }}" == "main" ]]; then
@@ -47,13 +43,11 @@ jobs:
           renv::restore()
 
       - name: Install rsconnect
-        if: ${{ env.DEPLOY_TARGET == 'shinyapps' }}
         shell: Rscript {0}
         run: |
           if (!requireNamespace("rsconnect", quietly = TRUE)) install.packages("rsconnect")
 
       - name: Deploy to ShinyApps.io
-        if: ${{ env.DEPLOY_TARGET == 'shinyapps' }}
         run: |
-          Rscript -e "rsconnect::setAccountInfo(name = 'department-for-education', token = '${{ secrets.SHINYAPPS_TOKEN }}', secret = '${{ secrets.SHINYAPPS_SECRET }}')"
-          Rscript -e "rsconnect::deployApp(appName='$SHINYAPP_NAME', forceUpdate = TRUE)"
+          -e "rsconnect::setAccountInfo(name = 'department-for-education', token = '${{secrets.SHINYAPPS_TOKEN}}', secret = '${{secrets.SHINYAPPS_SECRET}}')"
+          -e "rsconnect::deployApp(appName=${{env.SHINYAPP_NAME}}, forceUpdate = TRUE)"
