--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+      
       - name: Read parameters
         run: |
           DASHBOARD_NAME=$(yq '.dashboard_name' ${{ inputs.parameter_file }})
