--- a/.github/workflows/dashboard_deploy_template.yaml
+++ b/.github/workflows/dashboard_deploy_template.yaml
@@ -7,52 +7,43 @@ on:
         description: "Path to the parameters file"
         required: true
         type: string
+    secrets:
+      SHINYAPPS_SECRET:
+        required: true
+      SHINYAPPS_TOKEN:
+        required: true
 
 jobs:
   deployShiny:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/dfe-analytical-services/dfe-r-base:latest
+      options: --user root
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install yq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y yq
-
-      - name: Read parameters
-        run: |
-          DASHBOARD_NAME=$(yq '.dashboard_name' ${{ inputs.parameter_file }})
-          DEPLOY_TARGET=$(yq '.deploy_target' ${{ inputs.parameter_file }})
-          INSTALL_TERRA_DEPENDENCIES=$(yq '.install_terra_dependencies' ${{ inputs.parameter_file }})
-          INSTALL_UNITS_DEPENDENCIES=$(yq '.install_unit_dependencies' ${{ inputs.parameter_file }})
-          EXTRA_PACKAGES=$(yq '.extra_packages | join(" ")' ${{ inputs.parameter_file }})
-
-          echo "DASHBOARD_NAME=$DASHBOARD_NAME" >> $GITHUB_ENV
-          echo "DEPLOY_TARGET=$DEPLOY_TARGET" >> $GITHUB_ENV
-          echo "INSTALL_TERRA_DEPENDENCIES=INSTALL_TERRA_DEPENDENCIES" >> $GITHUB_ENV
-          echo "INSTALL_UNITS_DEPENDENCIES=INSTALL_UNITS_DEPENDENCIES" >> $GITHUB_ENV
-          echo "EXTRA_PACKAGES=$EXTRA_PACKAGES" >> $GITHUB_ENV
 
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
-      - name: Install terra dependencies
-        if: env.INSTALL_TERRA_DEPENDENCIES == 'true'
+      
+      - name: Read parameters
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y gdal-bin libgdal-dev proj-bin libproj-dev
+          DASHBOARD_NAME=$(yq -r '.dashboard_name' ${{ inputs.parameter_file }})
+          DEPLOY_TARGET=$(yq -r '.deploy_target' ${{ inputs.parameter_file }})
 
-      - name: Install units dependencies
-        if: env.INSTALL_UNITS_DEPENDENCIES == 'true'
-        run: sudo apt-get install libudunits2-dev
+          echo "DASHBOARD_NAME=$DASHBOARD_NAME" >> $GITHUB_ENV
+          echo "DEPLOY_TARGET=$DEPLOY_TARGET" >> $GITHUB_ENV
 
       - name: Set environment variables based on branch
         run: |
           if [[ "${{ github.ref_name }}" == "main" ]]; then
-            echo "SHINYAPP_NAME='${{ env.DASHBOARD_NAME }}'" >> $GITHUB_ENV
+            echo "SHINYAPP_NAME=$DASHBOARD_NAME" >> $GITHUB_ENV
           else
-            echo "SHINYAPP_NAME='dev-${{ env.DASHBOARD_NAME }}'" >> $GITHUB_ENV
+            echo "SHINYAPP_NAME=dev-$DASHBOARD_NAME" >> $GITHUB_ENV
           fi
 
       - name: Restore renv snapshot
@@ -61,23 +52,13 @@ jobs:
           if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
           renv::restore()
 
-      - name: Install extra R packages
-        if: env.EXTRA_PACKAGES != ''
-        shell: Rscript {0}
-        run: |
-          packages <- strsplit(Sys.getenv("EXTRA_PACKAGES"), " ")[[1]]
-          if (length(packages) > 0 && nchar(packages[1]) > 0) {
-            install.packages(packages, repos='https://cloud.r-project.org')
-          }
-
       - name: Install rsconnect
-        if: env.DEPLOY_TARGET == 'shinyapps'
         shell: Rscript {0}
         run: |
           if (!requireNamespace("rsconnect", quietly = TRUE)) install.packages("rsconnect")
 
       - name: Deploy to ShinyApps.io
-        if: env.DEPLOY_TARGET == 'shinyapps'
-        run: |
-          Rscript -e "rsconnect::setAccountInfo(name = 'department-for-education', token = '${{ secrets.SHINYAPPS_TOKEN }}', secret = '${{ secrets.SHINYAPPS_SECRET }}')"
-          Rscript -e "rsconnect::deployApp(appName='${{ env.SHINYAPP_NAME }}', forceUpdate = TRUE)"
+        run: >
+          Rscript
+          -e "rsconnect::setAccountInfo(name = 'department-for-education', token = '${{secrets.SHINYAPPS_TOKEN}}', secret = '${{secrets.SHINYAPPS_SECRET}}')"
+          -e "rsconnect::deployApp(appName='${{env.SHINYAPP_NAME}}', forceUpdate = TRUE)"
