--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,10 @@
-comment: false
+comment:
+  layout: "header, diff, footer"
+  behavior: default
+  require_changes: false
+  require_base: false
+  require_head: true
+  hide_project_coverage: false
 
 coverage:
   status:
