--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,11 @@ export(external_link)
 export(header)
 export(init_analytics)
 export(init_cookies)
-export(pre_commit_innit)
+export(init_hooks)
 export(section_tags)
 export(style_code)
 export(support_panel)
 export(tidy_code)
-importFrom(digest,digest)
 importFrom(dplyr,filter)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
