--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     stringr,
     styler,
     xfun,
-    reactable
+    reactable,
+    readr
 Suggests: 
     devtools,
     diffviewer,
