--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,7 +24,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::lintr, local::.
-          needs: lint
+          needs: lint, cyclocomp
 
       - name: Lint
         run: lintr::lint_package()
