--- a/.github/workflows/trello.yaml
+++ b/.github/workflows/trello.yaml
@@ -1,9 +1,8 @@
 name: Trello PR card
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
-      - reopened
 
 jobs:
   create-card:
