15 add function to set up precommit (#92)
* added initial precommit functions

* update analytics key cleaning function

* add precommit funcs

* styler changes

* update pkgdown.yml

* pr review adjustments

* rename test file

* review updates

* review updates

* review updates

* update datachecker func

* update datachecker func

* Small bit of re-jigging

* Code cleaning

---------

Co-authored-by: Rich Bielby <richard.bielby@education.gov.uk>
Co-authored-by: Rich Bielby <richbielby@e.email>

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -36,3 +36,11 @@ reference:
   desc: Functions to create and manage tables and visualisations.
   contents:
   - dfe_reactable
+- title: "Pre-commit Hooks"
+  desc: "Functions for setting up and running pre-commit hooks"
+  contents:
+    - commit_hooks
+    - init_hooks
+    - data_checker
+    - style_code
+    - check_analytics_key
