--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ URL: https://dfe-analytical-services.github.io/dfeshiny/
 Depends: 
     R (>= 2.10)
 Imports: 
+    dplyr,
     checkmate,
     glue,
     htmltools,
@@ -25,7 +26,9 @@ Imports:
     shinyjs,
     stringr,
     styler,
-    reactable
+    xfun,
+    reactable,
+    readr
 Suggests: 
     devtools,
     diffviewer,
