--- a/.github/workflows/test_dashboard.yaml
+++ b/.github/workflows/test_dashboard.yaml
@@ -11,3 +11,4 @@ jobs:
     uses: dfe-analytical-services/dfeshiny/.github/workflows/automated_tests_template.yaml@bugfix/automated-test-workflow
     with:
       dashboard_path: "./tests/test_dashboard/"
+      is_package: "true"
