Adding type to is_package

--- a/.github/workflows/automated_tests_template.yaml
+++ b/.github/workflows/automated_tests_template.yaml
@@ -12,6 +12,7 @@ on:
         description: "Is this part of a package"
         default: 'false'
         required: false
+        type: string
 
 
 jobs:
