add functions to createe template files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,12 @@ export(dfe_reactable)
 export(external_link)
 export(header)
 export(init_analytics)
+export(init_app)
+export(init_commit_hooks)
 export(init_cookies)
 export(init_hooks)
+export(init_template)
+export(init_workflow)
 export(section_tags)
 export(support_panel)
 export(tidy_code)
