--- a/.github/workflows/test_dashboard.yaml
+++ b/.github/workflows/test_dashboard.yaml
@@ -8,7 +8,6 @@ name: Test dashboard
 
 jobs:
   automatedTests:
-    uses: dfe-analytical-services/dfeshiny/.github/workflows/automated_tests_template.yaml@bugfix/automated-test-workflow
-    with:
+    uses: dfe-analytical-services/dfeshiny/.github/workflows/automated_tests_template.yaml@main
       dashboard_path: "./tests/test_dashboard/"
       is_package: "true"
