namespace and description updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(init_hooks)
 export(section_tags)
 export(support_panel)
 export(tidy_code)
+importFrom(data.table,like)
 importFrom(dplyr,filter)
 importFrom(htmltools,tagList)
 importFrom(htmltools,tags)
