--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ URL: https://dfe-analytical-services.github.io/dfeshiny/
 Depends: 
     R (>= 2.10)
 Imports: 
+    data.table,
     dplyr,
     checkmate,
     glue,
