--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(init_analytics)
 export(init_cookies)
 export(init_hooks)
 export(section_tags)
+export(set_bookmark_include)
 export(support_panel)
 export(tidy_code)
 importFrom(dplyr,filter)
