--- a/.github/workflows/automated_tests_template.yaml
+++ b/.github/workflows/automated_tests_template.yaml
@@ -59,4 +59,5 @@ jobs:
         shell: Rscript {0}
         run: |
           chromote::local_chrome_version(binary = "chrome-headless-shell", quiet = FALSE)
+          if(file.exists("global.R")){source("global.R")}
           shinytest2::test_app( '${{ inputs.dashboard_path }}')
