--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(init_cookies)
 export(init_hooks)
 export(section_tags)
 export(set_bookmark_include)
+export(shinytest2_setup)
 export(support_panel)
 export(tidy_code)
 importFrom(dplyr,filter)
