Updated content links docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(cookies_panel_server)
 export(cookies_panel_ui)
 export(create_dashboard)
 export(custom_disconnect_message)
-export(dfe_contents_links)
+export(dfe_content_links)
 export(dfe_cookies_script)
 export(dfe_reactable)
 export(external_link)
