--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,6 +17,8 @@ permissions:
 jobs:
   lint:
     uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@new-feature/lintr-workflow-template
+    with:
+      is_package: "true"
     secrets:
       SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
       SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
