--- a/.github/workflows/lintr_reusable.yaml
+++ b/.github/workflows/lintr_reusable.yaml
@@ -35,19 +35,10 @@ jobs:
       - name: Install dependencies
         if: ${{ inputs.is_package == 'true' }}
         uses: r-lib/actions/setup-r-dependencies@v2
-
-      - name: Restore packages
-        shell: Rscript {0}
-        run: |
-          if (!requireNamespace("renv", quietly = TRUE)) install.packages("renv")
-          if (file.exists("renv.lock")){
-             renv::restore()
-             renv::install("lintr")
-             renv::install("cyclocomp")
-          } else {
-             warning("No renv.lock file found")
-             install.packages(c("lintr", "cyclocomp"))
-          }
+        with:
+          extra-packages:
+            - lintr
+            - cyclocomp
 
       - name: Run lintr
         run: lintr::sarif_output(lintr::lint_dir("."), "lintr-results.sarif")
