--- a/.github/workflows/lintr.yml
+++ b/.github/workflows/lintr.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   lint:
-    uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@new-feature/lintr-workflow-template
+    uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@main
     with:
       is_package: "true"
     secrets:
