--- a/.github/workflows/air.yaml
+++ b/.github/workflows/air.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main, master]
   pull_request:
 
-name: lintr
+name: air
 
 permissions:
   actions: write
@@ -16,6 +16,6 @@ permissions:
 
 jobs:
   lint:
-    uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@main
+    uses: dfe-analytical-services/dfeshiny/.github/workflows/air_reusable.yaml@workflows/air-reusable
     with:
-      is_package: "true"
+      is_dashboard: "false"
