--- a/.github/workflows/air_reusable.yaml
+++ b/.github/workflows/air_reusable.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       is_dashboard:
         description: "Is this scanning dashboard code"
-        default: 'false'
+        default: 'true'
         required: false
         type: string
 
@@ -21,16 +21,27 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Install the latest version of Air
         uses: posit-dev/setup-air@v1
         with:
           version: "latest"
+
       - name: Check standard locations
         run: |
-          air format R/ --check
-          air format tests/ --check
+          ls -a
+          air format R
+          air format tests
 
       - name: Check dashboard scripts
         if: ${{ inputs.is_dashboard == 'true' }}
         run: |
-          air format *.R --check
+          air format *.R
+
+      - name: Suggest
+        uses: reviewdog/action-suggester@v1
+        with:
+          level: error
+          fail_level: error
+          tool_name: air
