Change lintr linting from directory to package

--- a/.github/workflows/lintr_reusable.yaml
+++ b/.github/workflows/lintr_reusable.yaml
@@ -51,7 +51,7 @@ jobs:
         continue-on-error: true
 
       - name: Run lintr
-        run: lintr::sarif_output(lintr::lint_dir("."), "lintr-results.sarif")
+        run: lintr::sarif_output(lintr::lint_pkg(), "lintr-results.sarif")
         shell: Rscript {0}
         continue-on-error: true
 
