Update lintr workflow to use main branch

--- a/.github/workflows/lintr.yml
+++ b/.github/workflows/lintr.yml
@@ -16,6 +16,6 @@ permissions:
 
 jobs:
   lint:
-    uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@workflows/switch-lintr-to-pkg
+    uses: dfe-analytical-services/dfeshiny/.github/workflows/lintr_reusable.yaml@main
     with:
       is_package: "true"
